# k-core

./: Cargo.toml
src/: db.rs  error.rs  lib.rs  logging.rs  session.rs
src/ai/: embeddings.rs  qdrant.rs
src/broker/: mod.rs  nats.rs
src/http/: server.rs
