[package]
name = "k-core"
version = "0.1.0"
edition = "2024"

[features]
default = ["logging", "db-sqlx", "auth"]
logging = ["dep:tracing", "dep:tracing-subscriber"]
db-sqlx = ["dep:sqlx"]
postgres = ["sqlx/postgres"]
auth = ["dep:tower-sessions"]

[dependencies]
# Error handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Async
tokio = { version = "1.48.0", features = ["full"], optional = true }

# Database
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "macros",
    "sqlite",
    "postgres",
    "chrono",
    "uuid",
], optional = true }
sqlx-core = { version = "0.8.6", optional = true }

# Logging
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3.22", features = [
    "env-filter",
    "fmt",
], optional = true }

# Auth
tower-sessions = { version = "0.14.0", optional = true }

# Utils
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
